--- a/home/templates/import_file/file.html
+++ b/home/templates/import_file/file.html
@@ -2,15 +2,22 @@
 {% load static %}
 {% block content %}
 <meta charset="utf-8">  
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">  
-  
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">  
+<head>
+     <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>  
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"> </script>  
    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">  
 </head>  
 <style> 
+
+
+
+
+
+
+
+
+    
 
 .card {  
   margin-top: 100px;  
@@ -36,49 +43,61 @@
   height: 45px;  
 }  
 </style>  
-<body>  
- 
-   
- 
+<body> 
+
+ <form action="" method="POST" enctype="multipart/form-data" class="form-horizontal"> 
+    {% csrf_token %} 
+    <div class="row form-group">  
+        <div class="col-12 col-md-12">  
+            <div class="control-group" id="fields">
+                
+                    {% if messages %}
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                        <strong>!!</strong> {{ messages }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {% endif %}
+                 
+                <div class="controls">  
+                    <div class="entry input-group upload-input-group">  
+                        <input class="form-control" name="file" type="file">  
+                        <button class="btn btn-upload btn-success btn-add" type="button">  
+                            <i class="fa fa-plus"> </i>  
+                        </button>  
+                    </div>  
+                </div>  
+                <button class="btn btn-primary"> Upload </button>  
+            </div>  
+        </div>  
+    </div> 
+
+</form>  
+<table class="table">
+    <thead>
         
-                    
-                    <form action="" method="POST" enctype="multipart/form-data" class="form-horizontal"> 
-                        {% csrf_token %} 
-                        <div class="row form-group">  
-                            <div class="col-12 col-md-12">  
-                                <div class="control-group" id="fields">
-                                    
-                                        {% if messages %}
-                                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                                            <strong>!!</strong> {{ messages }}
-                                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                                          </div>
-                                        
-                                                
-                                                 
-                                            
-                                        
-                                    {% endif %}
-                                    <label class="control-label" for="field1">  
-                                        Upload File  
-                                    </label>  
-                                    <div class="controls">  
-                                        <div class="entry input-group upload-input-group">  
-                                            <input class="form-control" name="file" type="file">  
-                                            <button class="btn btn-upload btn-success btn-add" type="button">  
-                                                <i class="fa fa-plus"> </i>  
-                                            </button>  
-                                        </div>  
-                                    </div>  
-                                    <button class="btn btn-primary"> Upload </button>  
-                                </div>  
-                            </div>  
-                        </div>  
-                    </form>  
-                  
-            
-       
-   
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">File name</th>
+        <th scope="col">Date of import</th>
+        <th scope="col">Imported by</th>
+        <th scope="col">Shares</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        {% for file in  excel_files %}
+        <th scope="row">1</th>
+        <td>{{ file.id }}</td>
+        <td>{{ file.file.name }}</td>
+        <td>{{ file.imported_at }}</td>
+        <td>{{ file.created_by}}</td>
+        <td>Act</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
+
 
 <script>  
         $(function () {  
@@ -98,6 +117,8 @@
                 return false;  
             });  
         });  
+
+
 </script>  
 </body>  
 </html>
