--- a/home/templates/import_file/file.html
+++ b/home/templates/import_file/file.html
@@ -174,6 +174,7 @@ body {
                         <button class="btn btn-upload btn-success btn-add" type="button">  
                             <i class="fa fa-plus"> </i>  
                         </button>  
+                       
                     </div>  
                 </div>  
                 <button class="btn btn-primary"> Upload </button>  
@@ -183,7 +184,7 @@ body {
 
 </form>  
 
-<p>Il y a {{ total_fichiers }} fichiers au total.</p>
+
 <ul>
 <table class="table table-striped">
     <thead>
@@ -191,10 +192,10 @@ body {
       <tr>
        
         <th scope="col">ID</th>
-        <th scope="col">File name</th>
-        <th scope="col">Date of import</th>
-        <th scope="col">Imported by</th>
-        <th scope="col">Shares</th>
+        <th scope="col">File Name</th>
+        <th scope="col">Date Of Import</th>
+        <th scope="col">Imported By</th>
+        <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
@@ -202,14 +203,15 @@ body {
           <tr>
             
               <td>{{ fichier.id }}</td>
-              <td>{{ fichier}}</td>
+              <td>{{ name}}</td>
               <td>{{ fichier.created_at }}</td>
               <td>{{ fichier.updated_by }}</td>
               <td><div class="text-center">
                 <!-- Button HTML (to Trigger Modal) -->
                 
                 <a href="#myModal" class="btn btn-danger" data-toggle="modal">Delete</a>
-                <button type="button" class="btn btn-info">Details</button>
+                
+                <a href="{% url 'file_detail'  %}" class="btn btn-info">Details</a>
                 <button type="button" class="btn btn-primary">Apply filter</button>
             </div>
             
