--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/forms/basic_elements.html">
+              <a class="nav-link" href="{% url 'rule_list'%}">
                 <span class="menu-title">Rules </span>
                 <i class="mdi mdi-account menu-icon"></i>
               </a>
