--- a/home/templates/import_file/file.html
+++ b/home/templates/import_file/file.html
@@ -8,6 +8,7 @@
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>  
@@ -150,104 +151,114 @@ body {
 
 
 
+  
+
+
 </style>  
 <body> 
+   
+                <form action="" method="POST" enctype="multipart/form-data" class="form-horizontal"> 
+                    {% csrf_token %} 
+                    <div class="row form-group">  
+                        <div class="col-12 col-md-12">  
+                            <div class="control-group" id="fields">
+                                {% if messages %}
+                                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                    {% for message in messages %}
+                                        {{ message }}
+                                    {% endfor %}
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                </div>
+                            {% endif %}
+                                
+                                
+                                <div class="controls">  
+                                    <div class="entry input-group upload-input-group">  
+                                        <input class="form-control" name="file" type="file">  
+                                        <button class="btn btn-upload btn-success btn-add" type="button">  
+                                            <i class="fa fa-plus"> </i>  
+                                        </button>  
+                                    
+                                    </div>  
+                                </div>  
+                                <button class="btn btn-primary"> Upload </button>  
+                            </div>  
+                        </div>  
+                    </div> 
 
- <form action="" method="POST" enctype="multipart/form-data" class="form-horizontal"> 
-    {% csrf_token %} 
-    <div class="row form-group">  
-        <div class="col-12 col-md-12">  
-            <div class="control-group" id="fields">
-                {% if messages %}
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    {% for message in messages %}
-                        {{ message }}
-                    {% endfor %}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            {% endif %}
-                   
-                 
-                <div class="controls">  
-                    <div class="entry input-group upload-input-group">  
-                        <input class="form-control" name="file" type="file">  
-                        <button class="btn btn-upload btn-success btn-add" type="button">  
-                            <i class="fa fa-plus"> </i>  
-                        </button>  
-                       
-                    </div>  
-                </div>  
-                <button class="btn btn-primary"> Upload </button>  
-            </div>  
-        </div>  
-    </div> 
+                </form>  
 
-</form>  
-
-
-<ul>
-<table class="table table-striped">
-    <thead>
-        
-      <tr>
-       
-        <th scope="col">ID</th>
-        <th scope="col">File Name</th>
-        <th scope="col">Date Of Import</th>
-        <th scope="col">Imported By</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for fichier in fichiers_importes %}
-          <tr>
-            
-              <td>{{ fichier.id }}</td>
-              <td>{{ name}}</td>
-              <td>{{ fichier.created_at }}</td>
-              <td>{{ fichier.updated_by }}</td>
-              <td><div class="text-center">
-                <!-- Button HTML (to Trigger Modal) -->
-                
-                <a href="#myModal" class="btn btn-danger" data-toggle="modal">Delete</a>
-                
-                <a href="{% url 'file_detail'  %}" class="btn btn-info">Details</a>
-                <button type="button" class="btn btn-primary">Apply filter</button>
-            </div>
-            
-            <!-- Modal HTML -->
-            <div id="myModal" class="modal fade">
-                <div class="modal-dialog modal-confirm">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <div class="icon-box">
-                                <i class="material-icons">&#xE5CD;</i>
-                            </div>				
-                            <h4 class="modal-title">Are you sure?</h4>	
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        </div>
-                        <div class="modal-body">
-                            <p>Do you really want to delete <br>
-                                 "{{ fichier }}" ? <br>
-                                This process cannot be undone.</p>
-                        </div>
-                        <div class="modal-footer">
-                            <a href="{% url 'import_fil' %}"class="btn btn-info" data-dismiss="modal">Cancel</a>
-                           
-                            <form method="post">
-                                {% csrf_token %}
-                                <a href="{% url 'delete_fil' %}" class="btn btn-danger">Delete</a>
-                            </form>
+                <div class="col-lg-12 grid-margin stretch-card">
+                    <div class="card">
+                      <div class="card-body">
+                            <ul>
+                            <table class="table table-sm">
+                                <thead>
+                                    
+                                <tr>
+                                
+                                    <th scope="col">ID</th>
+                                    <th scope="col">File Name</th>
+                                    <th scope="col">Date Of Import</th>
+                                    <th scope="col">Imported By</th>
+                                    <th scope="col"></th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for fichier in fichiers_importes %}
+                                    <tr>
+                                        
+                                        <td>{{ fichier.id }}</td>
+                                        <td>{{ name}}</td>
+                                        <td>{{ fichier.created_at }}</td>
+                                        <td>{{ fichier.updated_by }}</td>
+                                        <td>
+                                            <div class="text-center">
+                                            <!-- Button HTML (to Trigger Modal) -->
+                                            
+                                            <a href="#myModal" class="btn " data-toggle="modal"><i class="fa fa-trash"></i></a>
+                                            
+                                            <a href="{% url 'file_detail'  %}" class="btn "><i class="mdi mdi-format-list-bulleted"></i> </a>
+                                            <a href="">Apply filter</a>
+                                            
+                                        </div></td>
+                                    
+                                        <!-- Modal HTML -->
+                                        <div id="myModal" class="modal fade">
+                                            <div class="modal-dialog modal-confirm">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <div class="icon-box">
+                                                            <i class="material-icons">&#xE5CD;</i>
+                                                        </div>				
+                                                        <h4 class="modal-title">Are you sure?</h4>	
+                                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <p>Do you really want to delete <br>
+                                                            "{{ name }}" ? <br>
+                                                            This process cannot be undone.</p>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <a href="{% url 'import_fil' %}"class="btn btn-info" data-dismiss="modal">Cancel</a>
+                                                    
+                                                        <form method="post">
+                                                            {% csrf_token %}
+                                                            <a href="{% url 'delete_fil' %}" class="btn btn-danger">Delete</a>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>  
+                                
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
-            </div>  
-       
-            </td>
-          </tr>
-      {% endfor %}
-  </tbody>
-  </table>
 
 
 
