--- a/home/templates/import_file/file.html
+++ b/home/templates/import_file/file.html
@@ -1,61 +1,63 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<meta charset="utf-8">  
-<head>
-     <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"> 
-     <meta charset="utf-8">
+<!-- Modal -->
+<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"> 
+<meta charset="utf-8">
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>  
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"> </script>  
-   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">  
-
-   
-</head> 
-<title>Bootstrap Delete Confirmation Modal</title>
-
-
-<style> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>  
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"> </script>  
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">  
+<style>
 
 
 
-
-
-
-
-
-    
-
-.card {  
-  margin-top: 100px;  
-}  
-.btn-upload {  
-    padding: 10px 20px;  
-    margin-left: 10px;  
-}  
-.btn-success:not(:disabled):not(.disabled).active, .btn-success:not(:disabled):not(.disabled):active, .show>.btn-success.dropdown-toggle {  
-    color: #fff;  
-    background-color: #0062cc;  
-    border-color: #1c7430;  
-}  
   
- 
-.upload-input-group {  
-    margin-bottom: 10px;  
-}  
-.input-group>.custom-select:not(:last-child) {  
-  height: 45px;  
-}  
-.input-group>.form-control:not(:last-child) {  
-  height: 45px;  
-}  
 
 
+.card{
+  width: 400px;
+  border: none;
+  border-radius: 10px;
+   
+  background-color: #fff;
+}
+
+
+
+.stats{
+
+      background: #f2f5f8 !important;
+
+    color: #000 !important;
+}
+.articles{
+  font-size:10px;
+  color: #a1aab9;
+}
+.number1{
+  font-weight:500;
+}
+.followers{
+    font-size:10px;
+  color: #a1aab9;
+
+}
+.number2{
+  font-weight:500;
+}
+.rating{
+    font-size:10px;
+  color: #a1aab9;
+}
+.number3{
+  font-weight:500;
+}
 
 /*message dalert*/
 
@@ -149,140 +151,108 @@ body {
 
 
 
+</style>
 
 
-  
+
+<div class="col-12 grid-margin stretch-card">
+    
+    <div class="card">
+        <div class="card-body">
 
 
-</style>  
-<body> 
-   
-                <form action="" method="POST" enctype="multipart/form-data" class="form-horizontal"> 
-                    {% csrf_token %} 
-                    <div class="row form-group">  
-                        <div class="col-12 col-md-12">  
-                            <div class="control-group" id="fields">
-                                {% if messages %}
-                                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                                    {% for message in messages %}
-                                        {{ message }}
-                                    {% endfor %}
-                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                                </div>
-                            {% endif %}
-                                
-                                
-                                <div class="controls">  
-                                    <div class="entry input-group upload-input-group">  
-                                        <input class="form-control" name="file" type="file">  
-                                        <button class="btn btn-upload btn-success btn-add" type="button">  
-                                            <i class="fa fa-plus"> </i>  
-                                        </button>  
-                                    
-                                    </div>  
-                                </div>  
-                                <button class="btn btn-primary"> Upload </button>  
-                            </div>  
-                        </div>  
-                    </div> 
-
-                </form>  
-
-                <div class="col-lg-12 grid-margin stretch-card">
-                    <div class="card">
-                      <div class="card-body">
-                            <ul>
-                            <table class="table table-sm">
-                                <thead>
-                                    
-                                <tr>
-                                
-                                    <th scope="col">ID</th>
-                                    <th scope="col">File Name</th>
-                                    <th scope="col">Date Of Import</th>
-                                    <th scope="col">Imported By</th>
-                                    <th scope="col"></th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% for fichier in fichiers_importes %}
-                                    <tr>
-                                        
-                                        <td>{{ fichier.id }}</td>
-                                        <td>{{ name}}</td>
-                                        <td>{{ fichier.created_at }}</td>
-                                        <td>{{ fichier.updated_by }}</td>
-                                        <td>
-                                            <div class="text-center">
-                                            <!-- Button HTML (to Trigger Modal) -->
-                                            
-                                            <a href="#myModal" class="btn " data-toggle="modal"><i class="fa fa-trash"></i></a>
-                                            
-                                            <a href="{% url 'file_detail'  %}" class="btn "><i class="mdi mdi-format-list-bulleted"></i> </a>
-                                            <a href="">Apply filter</a>
-                                            
-                                        </div></td>
-                                    
-                                        <!-- Modal HTML -->
-                                        <div id="myModal" class="modal fade">
-                                            <div class="modal-dialog modal-confirm">
-                                                <div class="modal-content">
-                                                    <div class="modal-header">
-                                                        <div class="icon-box">
-                                                            <i class="material-icons">&#xE5CD;</i>
-                                                        </div>				
-                                                        <h4 class="modal-title">Are you sure?</h4>	
-                                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                    </div>
-                                                    <div class="modal-body">
-                                                        <p>Do you really want to delete <br>
-                                                            "{{ name }}" ? <br>
-                                                            This process cannot be undone.</p>
-                                                    </div>
-                                                    <div class="modal-footer">
-                                                        <a href="{% url 'import_fil' %}"class="btn btn-info" data-dismiss="modal">Cancel</a>
-                                                    
-                                                        <form method="post">
-                                                            {% csrf_token %}
-                                                            <a href="{% url 'delete_fil' %}" class="btn btn-danger">Delete</a>
-                                                        </form>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>  
-                                
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                            </table>
-                        </div>
-                    </div>
+            <div class="table-title">
+            <div class="row">
+                <div class="col-sm-9"><h2>List de Fichier</h2>
                 </div>
+                <br>
+                
+                <div class="col-sm-1">
+                    <a href=" {% url 'upload'%}" ><button class="btn btn-outline-success btn-icon-text"type="button">+ Import fichier</button></a>
+        
+                
+                
+                    
+                    
+                
+                    
+                    
+                </div>
+                </div>
+            </div>
+        </div>
+
+        <table class="table table-sm">
+            <thead>
+                
+            <tr>
+            
+                <th scope="col">ID</th>
+                <th scope="col">File Name</th>
+                <th scope="col">Date Of Import</th>
+                <th scope="col">Imported By</th>
+                <th scope="col"> action</th>
+            </tr>
+            </thead>
+            <tbody>
+             {%for x in data %}
+                <tr>
+                    
+                    <td>{{x }}</td>
+                    <td>{{x.name}}</td>
+                    <td>{{x.timestamp}}</td>
+                    <td>{{x.imported_by}}</td>
+                    <td>
+                        <div class="text-center">
+                            <!-- Button HTML (to Trigger Modal) -->
+                            
+                            <a href="#myModal" class="btn "data-toggle="modal"><i class="mdi mdi-delete"></i></a>
+                            
+                            <a href="" class="btn "><i class="mdi mdi-format-list-bulleted"></i> </a>
+                            <a href="{% url 'filter' x.id %}">Apply filter</a>
+                            
+                        </div> 
+                   </td>
+                
+                            <!-- Modal HTML -->
+                            <div id="myModal" class="modal fade">
+                                <div class="modal-dialog modal-confirm">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <div class="icon-box">
+                                                <i class="material-icons">&#xE5CD;</i>
+                                            </div>				
+                                            <h4 class="modal-title">Are you sure?</h4>	
+                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p>Do you really want to delete <br>
+                                                "{{x.name }}" ? <br>
+                                                This process cannot be undone.</p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <a href="{% url 'file' %}"class="btn btn-info" data-dismiss="modal">Cancel</a>
+                                        
+                                            
+                                              
+                                                <a href="{% url 'delit' x.id %}" class="btn btn-danger"onlick=PopUp()>Delete</a>
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>  
+                    
+                            </td>
+                        </tr>
+                {%endfor%}
+               </tbody>
+        </table>
+    </div>
+   
+
+     
+</div>
 
 
 
-<script>  
-        $(function () {  
-            $(document).on('click', '.btn-add', function (e) {  
-                e.preventDefault();  
-                var controlForm = $('.controls:first'),  
-                    currentEntry = $(this).parents('.entry:first'),  
-                    newEntry = $(currentEntry.clone()).appendTo(controlForm);  
-                newEntry.find('input').val('');  
-                controlForm.find('.entry:not(:last) .btn-add')  
-                    .removeClass('btn-add').addClass('btn-remove')  
-                    .removeClass('btn-success').addClass('btn-danger')  
-                    .html('<span class="fa fa-trash"> </span>');  
-            }).on('click', '.btn-remove', function (e) {  
-                $(this).parents('.entry:first').remove();  
-                e.preventDefault();  
-                return false;  
-            });  
-        });  
-
-
-</script>  
-</body>  
-</html>
 {% endblock %}
