--- a/templates/base.html
+++ b/templates/base.html
@@ -5,16 +5,13 @@
 
 <html lang="en">
   <head>
-    <script src="{% static 'assets/js/file-upload.js' %}"></script>
+  
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>MS</title>
     <!-- plugins:css -->
-    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
-   
-    <link rel="stylesheet" href="{% static 'assets/css/imports.css' %}">
-     <link rel="stylesheet" href="{% static 'assets/vendors/mdi/css/materialdesignicons.min.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/vendors/mdi/css/materialdesignicons.min.css' %}">
     <link rel="stylesheet" href=" {% static 'assets/vendors/css/vendor.bundle.base.css' %}">
     
    
@@ -27,46 +24,22 @@
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <!-- End layout styles -->
     <link rel="shortcut icon" href="{% static 'assets/images/favicon.ico' %}" />
-    <link rel="shortcut icon" href="{% static 'assets/images/favicon.ico' %}" />
+ 
 
   </head>
   <body>
     <div class="container-scroller">
-      <div class="row p-0 m-0 proBanner" id="proBanner">
-        <div class="col-md-12 p-0 m-0">
-         
-        </div>
-      </div>
+
       <!-- partial:partials/_navbar.html -->
       <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
           <a class="navbar-brand brand-logo" href="index.html"><img  src=" {% static 'assets/images/logo.svg' %}" alt="logo"/></a>
           <a class="navbar-brand brand-logo-mini" href="index.html"><imgsrc=" {% static 'assets/images/logo-mini.svg' %}" alt="logo" /></a>
         </div>
-
-        
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
             <span class="mdi mdi-menu"></span>
           </button>
-          <div class="search-field d-none d-md-block">
-            <form class="d-flex align-items-center h-100" action="#">
-              
-            </form>
-          </div>
-          <ul class="navbar-nav navbar-nav-right">
-           
-            
-            
-
-
-
-
-
-
-          
-           
-          </ul>
           <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
             <span class="mdi mdi-menu"></span>
           </button>
@@ -77,28 +50,23 @@
         <!-- partial:partials/_sidebar.html -->
         <nav class="sidebar sidebar-offcanvas" id="sidebar">
           <ul class="nav">
-            <li class="nav-item nav-profile">
-              
-            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="index.html">
                 <span class="menu-title">Home</span>
                 <i class="mdi mdi-home menu-icon"></i>
-              </a>
+              </a> 
             </li>
             
             <li class="nav-item">
-             <!--<a class="nav-link" href="pages/icons/mdi.html">--> 
-              <a class="nav-link" href="{% url 'import_fil'%}">
+              <a class="nav-link" href="{% url 'file'%}" style="color:#i00;">
                 <span class="menu-title">Import And Applay</span>
                 
-                <i class="mdi mdi-file-excel menu-icon">
-                  
-                </i>
+                <i class="mdi mdi-file-excel menu-icon"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'rule_list'%}">
+              <a class="nav-link" href="">
                 <span class="menu-title">Rules </span>
                 <i class="mdi mdi-account menu-icon"></i>
               </a>
@@ -122,7 +90,17 @@
               </a>
             </li>
             
-           
+            <li class="nav-item sidebar-actions">
+              <span class="nav-link">
+                <div class="border-bottom">
+                  <h6 class="font-weight-normal mb-3">FILE</h6>
+                </div>
+            
+              <a href=" {% url 'upload'%}">  <button class="btn btn-block  btn-gradient-info mt-4">+ Importe fichier</button>
+              </a>
+          
+            </li>
+
           </ul>
         </nav>
         <!-- partial -->
@@ -137,9 +115,10 @@
 
           
             </div>
-          <div class="row">
-             {%block content%}
-             {%endblock content%}
+            <div class="row">
+              {%block content%}
+              {%endblock content%}
+            
           <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
           <footer class="footer">
@@ -168,8 +147,7 @@
     <script src="{% static 'assets/js/dashboard.js' %}"></script>
     <script src="{% static 'assets/js/todolist.js' %}"></script>
     <!-- End custom js for this page -->
-    <script src="{% static 'assets/js/todolist.js' %}"></script>
-    <script src="{% static 'assets/js/script.js' %}"></script>
+
     
     
     
