--- a/home/templates/import_file/file.html
+++ b/home/templates/import_file/file.html
@@ -181,8 +181,9 @@ body {
                 </div>
             </div>
         </div>
+         
 
-        <table class="table table-sm">
+        <table class="table table-hover table-fixed">
             <thead>
                 
             <tr>
@@ -206,10 +207,10 @@ body {
                         <div class="text-center">
                             <!-- Button HTML (to Trigger Modal) -->
                             
-                            <a href="#myModal" class="btn "data-toggle="modal"><i class="mdi mdi-delete"></i></a>
+                            <a href="#myModal" class="btn "data-toggle="modal"><i class="mdi mdi-delete" ></i></a>
                             
-                            <a href="" class="btn "><i class="mdi mdi-format-list-bulleted"></i> </a>
-                            <a href="{% url 'filter' x.id %}">Apply filter</a>
+                            <a href="{% url 'table' x.id %}" ><button class="btn btn-outline-primary btn-fw"type="button">inspecter</button></a>
+                            <a href="{% url 'filter' x.id %}"><button class="btn btn-outline-primary btn-fw"type="button">Apply filter</button></a>
                             
                         </div> 
                    </td>
