--- a/home/templates/rules/rule_detail.html
+++ b/home/templates/rules/rule_detail.html
@@ -32,28 +32,32 @@
 
 
 </style>  
-<body> 
 
- 
 
-<h2>Rule Details</h2>
-<p><strong>Rule Name:</strong> {{ rule.rule_name }}</p>
-<p><strong>Comment:</strong> {{ rule.comment }}</p>
-<p><strong>Created By:</strong> {{ rule.created_by }}</p>
-<p><strong>Updated By:</strong> {{ rule.updated_by }}</p>
-<p><strong>Created At:</strong> {{ rule.created_at }}</p>
-<p><strong>Updated At:</strong> {{ rule.updated_at }}</p>
+<div class="col-lg-12 grid-margin stretch-card">
+  <div class="card">
+              <div class="card-body">
 
-<p>
-  <a href="{% url 'rule_update' pk=rule.pk %}">Edit</a>
-  <form action="{% url 'rule_delete' pk=rule.pk %}" method="post" style="display: inline;">
-    {% csrf_token %}
-    <input type="submit" value="Delete">
-  </form>
-</p>
+          <h2>Rule Details</h2><br> 
+          <p><strong>Rule Name:</strong> {{ rule.name }}</p>
 
-<p><a href="{% url 'rule_list' %}">Back to Rule List</a></p>
 
-</body>  
-</html>
+          <p><strong>Updated By:</strong> {{ rule.updated_by }}</p>
+
+          <p><strong>Updated At:</strong> {{ rule.updated_at }}</p>
+
+          <p>
+            <a href="{% url 'rule_update' pk=rule.pk %}">Edit</a>
+            <form action="{% url 'rule_delete' pk=rule.pk %}" method="post" style="display: inline;">
+              {% csrf_token %}
+              <input type="submit" value="Delete">
+            </form>
+          </p>
+
+          <p><a href="{% url 'rule_list' %}">Back to Rule List</a></p>
+        </div>
+      </div>
+    </div>
+
+
 {% endblock %}
