--- a/home/templates/rules/rule_form.html
+++ b/home/templates/rules/rule_form.html
@@ -32,19 +32,23 @@
 
 
 </style>  
-<body> 
 
- 
 
-<h2 class="card-title" >{% if form.instance.pk %}Edit Rule{% else %}Create Rule{% endif %}</h2>
-<form  method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Save</button>
-</form>
+<div class="col-lg-12 grid-margin stretch-card">
+  <div class="card">
+    <div class="card-body">
 
-<p><a href="{% url 'rule_list' %}">Cancel</a></p>
+      <h2 class="card-title" >{% if form.instance.pk %}Edit Rule{% else %}Create Rule{% endif %}</h2>
+      <form  method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Save</button>
+      </form>
 
-</body>  
-</html>
+      <p><a href="{% url 'rule_list' %}">Cancel</a></p>
+    </div>
+  </div>
+</div>
+
+
 {% endblock %}
