--- a/templates/base.html
+++ b/templates/base.html
@@ -85,14 +85,14 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/tables/basic-table.html">
+              <a class="nav-link" href="">
                 <span class="menu-title">Profils</span>
                 <i class="mdi mdi-table-large menu-icon"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/charts/chartjs.html">
-                <span class="menu-title">Field Card</span>
+              <a class="nav-link" href="{% url 'equipe_list'%}">
+                <span class="menu-title">EquipeMS</span>
                 <i class="mdi mdi-chart-bar menu-icon"></i>
               </a>
             </li>
