--- a/home/templates/rules/list_rule.html
+++ b/home/templates/rules/list_rule.html
@@ -38,7 +38,8 @@
   <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-
+        <div class="col-sm-4"><h2>List des <b>Rules</b></h2></div><br>
+          <br>
         <table  class="table table-hover table-fixed">
           <thead>
             <tr>
