--- a/home/templates/EquipeMS/list_ms.html
+++ b/home/templates/EquipeMS/list_ms.html
@@ -284,7 +284,7 @@
                     </tr>
 					{% empty %}
 					<tr>
-					  <td colspan="3">No rules found.</td>
+					  <td colspan="3">No Equipes found.</td>
 					</tr>
 				  {% endfor %}
                     					
