--- a/home/templates/import_file/upload_file.html
+++ b/home/templates/import_file/upload_file.html
@@ -67,15 +67,18 @@
 
 
 <div class="main-panel">
-
+    <div class="content-wrapper">
+     
+      <form method="post" enctype="multipart/form-data"> 
+        {% csrf_token %}
        
-  <div class="row">
+       <div class="row">
+    
+    
 
     <div class="col-12 grid-margin stretch-card">
       <div class="card">
         <div class="card-body">
-            <form method="post" enctype="multipart/form-data"> 
-                {% csrf_token %}
        
             <label for="images" class="drop-container">
                 <span class="drop-title">Import fichier</span>
@@ -93,7 +96,7 @@
 </div>
 
 
-
+</div>
 
 
 
