--- a/home/templates/Resulta/resultas.html
+++ b/home/templates/Resulta/resultas.html
@@ -4,6 +4,8 @@
 {%block content%} 
 
 
+<link href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 
   <div class="row">
@@ -175,7 +177,7 @@
                           <input type="submit" value="Delete">  
                         </form>
                         
-                        <button class="btn btn-outline-success btn-icon-text"> Edit <i class="mdi mdi-file-check btn-icon-append"></i></button>
+                        <a href=""><i class="material-icons" data-toggle="tooltip" title="Edit" style="color:#ffd600  ">&#xE254;</i></a>
                       </td>
   
                     </tr>
