--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav-link" href="{% url 'chatbot'%}">
                 <span class="menu-title">Profils</span>
                 <i class="mdi mdi-table-large menu-icon"></i>
               </a>
