--- a/home/templates/EquipeMS/list_ms.html
+++ b/home/templates/EquipeMS/list_ms.html
@@ -240,19 +240,14 @@
 					<div class="col-sm-6">
 						
 						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New</span></a>
-						<a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						
+						
 					</div>
                 </div>
             </div>
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-						<th>
-							<span class="custom-checkbox">
-								<input type="checkbox" id="selectAll">
-								<label for="selectAll"></label>
-							</span>
-						</th>
+
                         <th>Name</th>
                         <th>Email</th>
 	
@@ -264,10 +259,7 @@
 					{% for equipe in equipes %}
                     <tr>
 						<td>
-							<span class="custom-checkbox">
-								<input type="checkbox" id="checkbox1" name="options[]" value="1">
-								<label for="checkbox1"></label>
-							</span>
+
 							{{ equipe.id }}
 							
 						</td>
@@ -279,7 +271,10 @@
                         <td>
                             <a href="#editEmployeeModal-{{ forloop.counter }}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
                             <a href="#deleteEmployeeModal-{{ forloop.counter }}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
-							<a href="#" class="view" title="View" data-toggle="tooltip"><i class="material-icons  "style="color:#1b5e20  ">&#xE417;</i></a>
+							<a href="{% url 'equipement_detail' equipe.id %}" class="view" title="View" data-toggle="tooltip"><i class="material-icons  "style="color:#1b5e20  ">&#xE417;</i></a>
+						
+					
+							
                         </td>
                     </tr>
 					{% empty %}
