--- a/home/templates/condition/condition.html
+++ b/home/templates/condition/condition.html
@@ -4,7 +4,8 @@
 {%block content%} 
 
 
-
+<link href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
   <div class="row">
   
@@ -174,9 +175,17 @@
                           <input type="submit" value="Delete">  
                         </form>
                         
-                        <button class="btn btn-outline-success btn-icon-text"> Edit <i class="mdi mdi-file-check btn-icon-append"></i></button>
+                        <a href=""><i class="material-icons" data-toggle="tooltip" title="Edit" style="color:#ffd600  ">&#xE254;</i></a>
                       </td>
-                      <td class="col-lg-3"> <a href="{% url 'resultat' x.id %}" >  <button type="button" class="btn btn-gradient-info btn-rounded btn-fw"> ADD Resulta</button></a></td>
+                      <td class="col-lg-3"> <a href="{% url 'resultat' x.id %}" >  <i class="material-icons" data-toggle="tooltip" title="Add" style="color:#303f9f ">&#xe148;</i>ADD resultat</a></td>
+
+
+                      
+                      
+
+                    
+                    
+                  </tr>
                     </tr>
                     {%endfor %}
                   </tbody>
