--- a/home/templates/import_file/file.html
+++ b/home/templates/import_file/file.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>  
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"> </script>  
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">  
@@ -17,7 +17,156 @@
 
 
 
-  
+    .table-wrapper {
+        background: #fff;
+        padding: 20px 25px;
+        margin: 30px 0;
+		border-radius: 3px;
+        box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    }
+	.table-title {        
+		padding-bottom: 15px;
+		background: #435d7d;
+		color: #fff;
+		padding: 16px 30px;
+		margin: -20px -25px 10px;
+		border-radius: 3px 3px 0 0;
+    }
+    .table-title h2 {
+		margin: 5px 0 0;
+		font-size: 24px;
+	}
+	.table-title .btn-group {
+		float: right;
+	}
+	.table-title .btn {
+		color: #fff;
+		float: right;
+		font-size: 13px;
+		border: none;
+		min-width: 50px;
+		border-radius: 2px;
+		border: none;
+		outline: none !important;
+		margin-left: 10px;
+	}
+	.table-title .btn i {
+		float: left;
+		font-size: 21px;
+		margin-right: 5px;
+	}
+	.table-title .btn span {
+		float: left;
+		margin-top: 2px;
+	}
+    table.table tr th, table.table tr td {
+        border-color: #e9e9e9;
+		padding: 12px 15px;
+		vertical-align: middle;
+    }
+	table.table tr th:first-child {
+		width: 60px;
+	}
+	table.table tr th:last-child {
+		width: 100px;
+	}
+    table.table-striped tbody tr:nth-of-type(odd) {
+    	background-color: #fcfcfc;
+	}
+	table.table-striped.table-hover tbody tr:hover {
+		background: #f5f5f5;
+	}
+    table.table th i {
+        font-size: 13px;
+        margin: 0 5px;
+        cursor: pointer;
+    }	
+    table.table td:last-child i {
+		opacity: 0.9;
+		font-size: 22px;
+        margin: 0 5px;
+    }
+	table.table td a {
+		font-weight: bold;
+		color: #566787;
+		display: inline-block;
+		text-decoration: none;
+		outline: none !important;
+	}
+	table.table td a:hover {
+		color: #2196F3;
+	}
+	table.table td a.edit {
+        color: #FFC107;
+    }
+    table.table td a.delete {
+        color: #F44336;
+    }
+    table.table td i {
+        font-size: 19px;
+    }
+	table.table .avatar {
+		border-radius: 50%;
+		vertical-align: middle;
+		margin-right: 10px;
+	}
+    .pagination {
+        float: right;
+        margin: 0 0 5px;
+    }
+    .pagination li a {
+        border: none;
+        font-size: 13px;
+        min-width: 30px;
+        min-height: 30px;
+        color: #999;
+        margin: 0 2px;
+        line-height: 30px;
+        border-radius: 2px !important;
+        text-align: center;
+        padding: 0 6px;
+    }
+    .pagination li a:hover {
+        color: #666;
+    }	
+    .pagination li.active a, .pagination li.active a.page-link {
+        background: #03A9F4;
+    }
+    .pagination li.active a:hover {        
+        background: #0397d6;
+    }
+	.pagination li.disabled i {
+        color: #ccc;
+    }
+    .pagination li i {
+        font-size: 16px;
+        padding-top: 6px
+    }
+    .hint-text {
+        float: left;
+        margin-top: 10px;
+        font-size: 13px;
+    } 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 .card{
@@ -155,100 +304,91 @@ body {
 
 
 
-<div class="col-12 grid-margin stretch-card">
-    
-    <div class="card">
-        <div class="card-body">
-
-
-            <div class="table-title">
+<div class="container">
+    <div class="table-wrapper">
+        <div class="table-title">
             <div class="row">
-                <div class="col-sm-9"><h2>List de Fichier</h2>
-                </div>
-                <br>
-                
-                <div class="col-sm-1">
-                    <a href=" {% url 'upload'%}" ><button class="btn btn-outline-success btn-icon-text"type="button">+ Import fichier</button></a>
-        
-                
-                
-                    
-                    
-                
-                    
-                    
-                </div>
-                </div>
-            </div>
-        </div>
-         
+                    <div class="col-sm-6">
+                         <h2>Liste <b>File</b></h2>
+                   </div>
+                        <div class="col-sm-6">
+                            <a href=" {% url 'upload'%}" ><button class="btn btn-outline-success btn-icon-text"type="button">+ Import fichier</button></a>
+                        </div>
+         </div>
+     </div>
 
-        <table class="table table-hover table-fixed">
-            <thead>
-                
-            <tr>
-            
-                <th scope="col">ID</th>
-                <th scope="col">File Name</th>
-                <th scope="col">Date Of Import</th>
-                <th scope="col">Imported By</th>
-                <th scope="col"> action</th>
-            </tr>
-            </thead>
-            <tbody>
-             {%for x in data %}
-                <tr>
+
+
+
+            <table class="table table-striped table-hover">
+                <thead>
                     
-                    <td>{{x }}</td>
-                    <td>{{x.name}}</td>
-                    <td>{{x.timestamp}}</td>
-                    <td>{{x.imported_by}}</td>
-                    <td>
-                        <div class="text-center">
-                            <!-- Button HTML (to Trigger Modal) -->
-                            
-                            <a href="#myModal" class="btn "data-toggle="modal"><i class="mdi mdi-delete" ></i></a>
-                            
-                            <a href="{% url 'table' x.id %}" ><button class="btn btn-outline-primary btn-fw"type="button">inspecter</button></a>
-                            <a href="{% url 'filter' x.id %}"><button class="btn btn-outline-primary btn-fw"type="button">Apply filter</button></a>
-                            
-                        </div> 
-                   </td>
+                <tr>
                 
-                            <!-- Modal HTML -->
-                            <div id="myModal" class="modal fade">
-                                <div class="modal-dialog modal-confirm">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <div class="icon-box">
-                                                <i class="material-icons">&#xE5CD;</i>
-                                            </div>				
-                                            <h4 class="modal-title">Are you sure?</h4>	
-                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <p>Do you really want to delete <br>
-                                                "{{x.name }}" ? <br>
-                                                This process cannot be undone.</p>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <a href="{% url 'file' %}"class="btn btn-info" data-dismiss="modal">Cancel</a>
-                                        
+                    <th scope="col">ID</th>
+                    <th scope="col">File Name</th>
+                    <th scope="col">Date Of Import</th>
+                    <th scope="col">Imported By</th>
+                    <th scope="col"> action</th>
+                </tr>
+                </thead>
+                <tbody>
+                        
+                        <tr>
+                            {%for x in data %}
+                        
+                            <td>{{x }}</td>
+                            <td>{{x.name}}</td>
+                            <td>{{x.timestamp}}</td>
+                            <td>{{x.imported_by}}</td>
+                            <td>
+                            <div class="text-center">
+                                <!-- Button HTML (to Trigger Modal) -->
+                                
+                                <a href="#myModal" class="btn "data-toggle="modal"><i class="mdi mdi-delete-forever
+                                    " style="color:#d50000  "></i></a>
+                                
+                                <a href="{% url 'table' x.id   %}" ><button class="btn btn-outline-primary btn-fw"type="button">inspecter</button></a>
+                                <a href="{% url 'filter' x.id %}"><button class="btn btn-outline-primary btn-fw"type="button">Apply filter</button></a>
+                                
+                            </div> 
+                         </td>
+                    
+                                <!-- Modal HTML -->
+                                <div id="myModal" class="modal fade">
+                                    <div class="modal-dialog modal-confirm">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <div class="icon-box">
+                                                    <i class="material-icons">&#xE5CD;</i>
+                                                </div>				
+                                                <h4 class="modal-title">Are you sure?</h4>	
+                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Do you really want to delete <br>
+                                                    "{{x.name }}" ? <br>
+                                                    This process cannot be undone.</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <a href="{% url 'file' %}"class="btn btn-info" data-dismiss="modal">Cancel</a>
                                             
-                                              
-                                                <a href="{% url 'delit' x.id %}" class="btn btn-danger"onlick=PopUp()>Delete</a>
-                                            
+                                                
+                                                
+                                                    <a href="{% url 'delit' x.id %}" class="btn btn-danger"onlick=PopUp()>Delete</a>
+                                                
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            </div>  
-                    
-                            </td>
-                        </tr>
-                {%endfor%}
-               </tbody>
-        </table>
+                                </div>  
+                        
+                                </td>
+                            </tr>
+                        {%endfor%}
+                </tbody>
+            </table>
     </div>
+
    
 
      
