--- a/home/templates/EquipeMS/detail.html
+++ b/home/templates/EquipeMS/detail.html
@@ -251,9 +251,9 @@
             <p><strong> Name :</strong>  {{ equipement.name }}</p>
 
 
-          <p><strong>Updated By:</strong> {{ equipement.email }}</p>
+          <p><strong>email:</strong> {{ equipement.email }}</p>
 
-          <p><strong>Updated At:</strong>  {{ equipement.Phone }}</p>
+          <p><strong>phone:</strong>  {{ equipement.Phone }}</p>
 
           <p>
 
