--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,11 +1,120 @@
-{% extends 'base.html' %}
-{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- MDB -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>MS</title>
+    <style>
+        #right-button {
+            float: right; /* Positionne le bouton à droite */
+            /* Autres styles pour le bouton, comme la couleur de fond, la couleur du texte, la taille, etc. */
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px 20px;
+        }
+    </style>
+  </head>
+  <body>
+    <section
+      class="vh-100 bg-image"
+      style="
+        background-image: url('https://www.lechotouristique.com/wp-content/uploads/2019/06/adobestock_187208444.jpg');
+      "
+     >
+      <center><h2 style="color= #000080 ">LATECOERE</h2></center>
+      <div class="content">
+        
+        <!-- Bouton à droite -->
+      
+        <a class="nav-link" href="{% url 'log'%}"><button id="right-button" class="btn btn-primary btn-block">Sign in</button></a><br>
+        <br><a class="nav-link" href="{% url 'home'%}"><button id="right-button" class="btn btn-primary btn-block"> Register</button></a>
+    </div>
+    </section>
 
-{%block content%}
+    <!-- MDB -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"
+    ></script>
+  </body>
+</html>
 
 
 
 
 
 
-{%endblock content%}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
