--- a/templates/base.html
+++ b/templates/base.html
@@ -31,27 +31,75 @@
     <div class="container-scroller">
       
 
+
       <!-- partial:partials/_navbar.html -->
       <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-          <a class="navbar-brand brand-logo" href="index.html"><img  src=" {% static 'assets/images/logo.svg' %}" alt="logo"/></a>
-          <a class="navbar-brand brand-logo-mini" href="index.html"><imgsrc=" {% static 'assets/images/logo-mini.svg' %}" alt="logo" /></a>
+          <a class="navbar-brand brand-logo" href="profile.html"><img  src=" {% static 'assets/images/a.png' %}" style="width:100px;height:100px;"alt="logo"/></a>
+          <a class="navbar-brand brand-logo-mini" href="profile.html"><imgsrc=" {% static 'assets/images/a.png' %}"  style="width:100px ; height:100px;" alt="logo" /></a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
             <span class="mdi mdi-menu"></span>
           </button>
-          <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-            <span class="mdi mdi-menu"></span>
-          </button>
+          <div class="search-field d-none d-md-block">
+ 
+          </div>
+          <ul class="navbar-nav navbar-nav-right">
+            <li class="nav-item nav-profile dropdown">
+              <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                <div class="nav-profile-img">
+                  <img src="{% static 'assets/images/a.png' %}" alt="image">
+                  <span class="availability-status online"></span>
+                </div>
+                <div class="nav-profile-text">
+                  <p class="mb-1 text-black">{{ user.username }}</p>
+                </div>
+              </a>
+              <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
+                <a class="dropdown-item" href="#">
+                  <i class="mdi mdi-cached me-2 text-success"></i> Activity Log </a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">
+                  <i class="mdi mdi-logout me-2 text-primary"></i> Signout </a>
+              </div>
+            </li>
+
+         
+
+    
+
+
+          </ul>
+
         </div>
       </nav>
+      
       <!-- partial -->
       <div class="container-fluid page-body-wrapper">
         <!-- partial:partials/_sidebar.html -->
         <nav class="sidebar sidebar-offcanvas" id="sidebar">
           <ul class="nav">
+            <li class="nav-item nav-profile">
+              <a href="#" class="nav-link">
+                <div class="nav-profile-image">
+                  <img src="{% static 'assets/images/a.png' %}" alt="profile">
+                  <span class="login-status online"></span>
+                  <!--change to offline or busy as needed-->
+                </div>
+                <div class="nav-profile-text d-flex flex-column">
+                  <br>
+                  <br>
+                  <br>
+                  <span class="font-weight-bold mb-2">{{ user.username }}</span>
+                  <span class="text-secondary text-small">{{user.role}}</span>
+                </div>
+                <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
+              </a>
+            </li>
 
+            {% if user.role == 'admin'  %}
+            <!-- Show manager-specific content -->
             <li class="nav-item">
               <a class="nav-link" href="http://127.0.0.1:8008/admin/login/?next=/admin/">
                 <span class="menu-title">Connextion</span>
@@ -59,19 +107,24 @@
               </a> 
             </li>
             
+            {% endif %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'file'%}" style="color:#i00;">
+              <a class="nav-link" href="{% url 'file'%}"style="color:#i00;">
                 <span class="menu-title">Import And Applay</span>
                 
                 <i class="mdi mdi-file-excel menu-icon"></i>
               </a>
             </li>
+            {% if user.role == 'manager' %}
+            <!-- Show manager-specific content -->
+
             <li class="nav-item">
               <a class="nav-link" href="{% url 'rule_list'%}">
                 <span class="menu-title">Rules </span>
                 <i class="mdi mdi-account menu-icon"></i>
               </a>
             </li>
+            {% endif %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'List_condition'%}">
                 <span class="menu-title">All condution</span>
@@ -86,16 +139,22 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'chatbot'%}">
-                <span class="menu-title">Profils</span>
-                <i class="mdi mdi-table-large menu-icon"></i>
+                <span class="menu-title">ChatBot</span>
+                <i class="mdi mdi-reddit menu-icon"></i>
               </a>
             </li>
+          
+            {% if user.role == 'manager' %}
+             <!-- Show manager-specific content -->
+
             <li class="nav-item">
               <a class="nav-link" href="{% url 'equipe_list'%}">
                 <span class="menu-title">EquipeMS</span>
                 <i class="mdi mdi-chart-bar menu-icon"></i>
               </a>
             </li>
+            {% endif %}
+
             
             <li class="nav-item sidebar-actions">
               <span class="nav-link">
