--- a/home/templates/home/profile.html
+++ b/home/templates/home/profile.html
@@ -3,6 +3,23 @@
 
 {%block content%}
 
+<div class="col-md-7 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <div class="clearfix">
+                <h4 class="card-title float-left">Visit And Sales Statistics</h4>
+                <div id="visit-sale-chart-legend" class="rounded-legend legend-horizontal legend-top-right float-right"></div>
+            </div>
+            <canvas id="visit-sale-chart" class="mt-4"></canvas>
+            <div>
+                <p>Nombre d'utilisateurs User: {{ user_count }}</p>
+                <p>Nombre d'utilisateurs Manager: {{ manager_count }}</p>
+                <p>Nombre d'utilisateurs Admin: {{ admin_count }}</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 
