--- a/templates/base.html
+++ b/templates/base.html
@@ -57,8 +57,10 @@
                 </div>
               </a>
               <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
-                <a class="dropdown-item" href="#">
+                {% if user.role == 'admin'  %}
+                <a class="dropdown-item" href="http://127.0.0.1:8008/admin/login/?next=/admin/">
                   <i class="mdi mdi-cached me-2 text-success"></i> Admin </a>
+                  {% endif %}
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'index'%}">
                   <i class="mdi mdi-logout me-2 text-primary"></i> Signout </a>
@@ -98,16 +100,6 @@
               </a>
             </li>
 
-            {% if user.role == 'admin'  %}
-            <!-- Show manager-specific content -->
-            <li class="nav-item">
-              <a class="nav-link" href="http://127.0.0.1:8008/admin/login/?next=/admin/">
-                <span class="menu-title">Connextion</span>
-                <i class="mdi mdi-home menu-icon"></i>
-              </a> 
-            </li>
-            
-            {% endif %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'file'%}"style="color:#i00;">
                 <span class="menu-title">Import And Applay</span>
@@ -115,7 +107,7 @@
                 <i class="mdi mdi-file-excel menu-icon"></i>
               </a>
             </li>
-            {% if user.role == 'manager' %}
+            {% if user.role != 'user' %}
             <!-- Show manager-specific content -->
 
             <li class="nav-item">
@@ -144,7 +136,7 @@
               </a>
             </li>
           
-          
+            {% if user.role != 'user' %}
              <!-- Show manager-specific content -->
 
             <li class="nav-item">
@@ -153,7 +145,7 @@
                 <i class="mdi mdi-chart-bar menu-icon"></i>
               </a>
             </li>
-           
+            {% endif %}
 
             
             <li class="nav-item sidebar-actions">
