--- a/home/templates/import_file/import.html
+++ b/home/templates/import_file/import.html
@@ -370,7 +370,7 @@ var doughnutChart = new Chart(doughnutChartCanvas, {
           
             <div class="table-title">
                 <div class="row">
-                    <div class="col-sm-5"><h2> Fichier de ID: <b> {{id}} </b></h2></div>
+                    <div class="col-sm-5"></div>
                    
                     <div class="col-sm-7">
 
