--- a/home/templates/home/profile.html
+++ b/home/templates/home/profile.html
@@ -3,24 +3,95 @@
 
 {%block content%}
 
-<div class="col-md-7 grid-margin stretch-card">
+
+
+
+
+
+
+<script >
+    $(function () {
+  /* ChartJS
+  * -------
+  * Data and config for chartjs
+  */
+  'use strict';
+  
+  var doughnutPieData = {
+  datasets: [{
+    data: [{{faux}},{{vrai}} ],
+    backgroundColor: [
+      'rgba(255, 99, 132, 0.5)',
+      'rgba(54, 162, 235, 0.5)',
+      'rgba(255, 206, 86, 0.5)',
+      'rgba(75, 192, 192, 0.5)',
+      'rgba(153, 102, 255, 0.5)',
+      'rgba(255, 159, 64, 0.5)'
+    ],
+    borderColor: [
+      'rgba(255,99,132,1)',
+      'rgba(54, 162, 235, 1)',
+      'rgba(255, 206, 86, 1)',
+      'rgba(75, 192, 192, 1)',
+      'rgba(153, 102, 255, 1)',
+      'rgba(255, 159, 64, 1)'
+    ],
+  }],
+  
+  // These labels appear in the legend and in the tooltips when hovering different arcs
+  labels: [
+    'Faux {{faux}}%',
+    ' Vrai {{vrai}}%',
+  ]
+  };
+  var doughnutPieOptions = {
+  responsive: true,
+  animation: {
+    animateScale: true,
+    animateRotate: true
+  }
+  };
+  
+  
+  if ($("#doughnutChart").length) {
+  var doughnutChartCanvas = $("#doughnutChart").get(0).getContext("2d");
+  var doughnutChart = new Chart(doughnutChartCanvas, {
+    type: 'doughnut',
+    data: doughnutPieData,
+    options: doughnutPieOptions
+  });
+  }
+  
+  
+  });
+  </script>
+  
+
+
+
+
+
+
+<div class="col-md-8 col-lg-8 col-xl-8 order-2 order-lg-8">
     <div class="card">
         <div class="card-body">
             <div class="clearfix">
                 <h4 class="card-title float-left">Visit And Sales Statistics</h4>
                 <div id="visit-sale-chart-legend" class="rounded-legend legend-horizontal legend-top-right float-right"></div>
             </div>
-            <canvas id="visit-sale-chart" class="mt-4"></canvas>
+            <canvas id="visit-sale-chart" class="mt-2">
+                
+            </canvas>
+
+          
             <div>
-                <p>Nombre d'utilisateurs User: {{ user_count }}</p>
-                <p>Nombre d'utilisateurs Manager: {{ manager_count }}</p>
-                <p>Nombre d'utilisateurs Admin: {{ admin_count }}</p>
+                <p>Nombre d'utilisateurs User: {{ i }}</p>
+                <p>Nombre d'utilisateurs Manager: {{ j }}</p>
+                <p>Nombre d'utilisateurs Admin: {{ k }}</p>
             </div>
         </div>
     </div>
-</div>
-
-
+</div></div></div>
 
 
 
