--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
               </a>
               <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
                 {% if user.role == 'admin'  %}
-                <a class="dropdown-item" href="http://127.0.0.1:8008/admin/login/?next=/admin/">
+                <a class="dropdown-item" href="/admin">
                   <i class="mdi mdi-cached me-2 text-success"></i> Admin </a>
                   {% endif %}
                 <div class="dropdown-divider"></div>
@@ -83,7 +83,7 @@
         <nav class="sidebar sidebar-offcanvas" id="sidebar">
           <ul class="nav">
             <li class="nav-item nav-profile">
-              <a href="#" class="nav-link">
+              <a href="{% url 'profile'%}" class="nav-link">
                 <div class="nav-profile-image">
                   <img src="{% static 'assets/images/a.png' %}" alt="profile">
                   <span class="login-status online"></span>
